tests/AdEspresso/FacebookBundle/DependencyInjection/Fixtures/valid/basic-sdk.php
<?php

return [
    'facebook' => [
        'sdk' => [
            'config' => [
                'app_id' => 'id',
                'app_secret' => 'secret',
            ],
        ],
        'ads' => [
            'enabled' => false,
        ],
    ],
];
