tests/AdEspresso/FacebookBundle/DependencyInjection/Fixtures/invalid/only-app_id-ads.php
<?php

return [
    'facebook' => [
        'sdk' => [
            'enabled' => false,
        ],
        'ads' => [
            'config' => [
                'app_id' => 'id',
            ],
        ],
    ],
];
